force-app/main/default/objects/Time_Entry__c/fields/Batch_Key__c.field-meta.xml
<CustomField>
    <fullName>Batch_Key__c</fullName>
    <label>Batch Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>