force-app/main/default/objects/Time_Entry__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <formula>IF(
    /* --- PATH 1: Use manual hours only when &gt; 0 --- */
    Submit_Hours__c &gt; 0,

    /* Convert manual hours → H MM */
    TEXT(
        FLOOR( Submit_Hours__c )
    ) &amp;
    &quot; H &quot; &amp;
    RIGHT(
        &quot;00&quot; &amp;
        TEXT(
            ROUND(
                MOD( Submit_Hours__c * 60, 60 ),
                0
            )
        ),
        2
    ) &amp;
    &quot;M&quot;,

    /* --- PATH 2: Your original Start/End formula --- */
    IF(
        ISBLANK(End_Time__c),
        &quot;&quot;,
        TEXT(
            FLOOR(
                MAX(
                    0,
                    ROUND(
                        ((End_Time__c - Start_Time__c) * 1440) - (Paused_Seconds__c / 60),
                        0
                    )
                ) / 60
            )
        ) &amp;
        &quot; H &quot; &amp;
        RIGHT(
            &quot;00&quot; &amp;
            TEXT(
                MOD(
                    MAX(
                        0,
                        ROUND(
                            ((End_Time__c - Start_Time__c) * 1440) - (Paused_Seconds__c / 60),
                            0
                        )
                    ),
                    60
                )
            )
        ,
        2
        ) &amp;
        &quot;M&quot;
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration</label>
    <type>Text</type>
</CustomField>