force-app/main/default/objects/Time_Entry__c/fields/Duration_Hours_Formula__c.field-meta.xml
<CustomField>
    <fullName>Duration_Hours_Formula__c</fullName>
    <formula>IF(
  ISBLANK(Duration__c),
  0,
  VALUE(
    TEXT(
      VALUE(
        LEFT(
          SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(LOWER(TRIM(Duration__c)),&quot; &quot;,&quot;&quot;),&quot;h&quot;,&quot;:&quot;),&quot;m&quot;,&quot;&quot;),
          FIND(&quot;:&quot;, SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(LOWER(TRIM(Duration__c)),&quot; &quot;,&quot;&quot;),&quot;h&quot;,&quot;:&quot;),&quot;m&quot;,&quot;&quot;)) - 1
        )
      )
    ) &amp; &quot;.&quot; &amp;
    RIGHT(
      &quot;00&quot; &amp;
      TEXT(
        VALUE(
          RIGHT(
            SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(LOWER(TRIM(Duration__c)),&quot; &quot;,&quot;&quot;),&quot;h&quot;,&quot;:&quot;),&quot;m&quot;,&quot;&quot;),
            LEN(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(LOWER(TRIM(Duration__c)),&quot; &quot;,&quot;&quot;),&quot;h&quot;,&quot;:&quot;),&quot;m&quot;,&quot;&quot;))
            -
            FIND(&quot;:&quot;, SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(LOWER(TRIM(Duration__c)),&quot; &quot;,&quot;&quot;),&quot;h&quot;,&quot;:&quot;),&quot;m&quot;,&quot;&quot;))
          )
        )
      )
    ,2)
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>