force-app/main/default/objects/Time_Entry__c/fields/Duration_Hours_Number__c.field-meta.xml
<CustomField>
    <fullName>Duration_Hours_Number__c</fullName>
    <label>Duration Hours Number</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>