force-app/main/default/objects/Time_Entry__c/fields/Duration_Minutes_Formula__c.field-meta.xml
<CustomField>
    <fullName>Duration_Minutes_Formula__c</fullName>
    <formula>IF(
  ISBLANK(Duration__c),
  0,
  VALUE(
    LEFT(
      SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(LOWER(TRIM(Duration__c)),&quot; &quot;,&quot;&quot;),&quot;h&quot;,&quot;:&quot;),&quot;m&quot;,&quot;&quot;),
      FIND(
        &quot;:&quot;,
        SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(LOWER(TRIM(Duration__c)),&quot; &quot;,&quot;&quot;),&quot;h&quot;,&quot;:&quot;),&quot;m&quot;,&quot;&quot;)
      ) - 1
    )
  ) * 60
  +
  VALUE(
    RIGHT(
      SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(LOWER(TRIM(Duration__c)),&quot; &quot;,&quot;&quot;),&quot;h&quot;,&quot;:&quot;),&quot;m&quot;,&quot;&quot;),
      LEN(
        SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(LOWER(TRIM(Duration__c)),&quot; &quot;,&quot;&quot;),&quot;h&quot;,&quot;:&quot;),&quot;m&quot;,&quot;&quot;)
      )
      -
      FIND(
        &quot;:&quot;,
        SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(LOWER(TRIM(Duration__c)),&quot; &quot;,&quot;&quot;),&quot;h&quot;,&quot;:&quot;),&quot;m&quot;,&quot;&quot;)
      )
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration Minutes Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>