force-app/main/default/objects/Time_Entry__c/fields/NEOS_Matter__c.field-meta.xml
<CustomField>
    <fullName>NEOS_Matter__c</fullName>
    <label>Matter</label>
    <referenceTo>NEOS_Matter__c</referenceTo>
    <relationshipLabel>Time Entries</relationshipLabel>
    <relationshipName>Time_Entries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>