force-app/main/default/objects/Time_Entry__c/fields/NEOS_Matter_Name__c.field-meta.xml
<CustomField>
    <fullName>NEOS_Matter_Name__c</fullName>
    <formula>NEOS_Matter__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TREO Matter Name</label>
    <type>Text</type>
</CustomField>