force-app/main/default/objects/Time_Entry__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Court Billing Description</label>
    <type>TextArea</type>
</CustomField>