force-app/main/default/objects/Time_Entry__c/fields/Paused_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Paused_Seconds__c</fullName>
    <label>Paused Seconds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>