force-app/main/default/objects/Time_Entry__c/fields/Paused_Start__c.field-meta.xml
<CustomField>
    <fullName>Paused_Start__c</fullName>
    <label>Paused Start</label>
    <type>DateTime</type>
</CustomField>