force-app/main/default/objects/Time_Entry__c/fields/Staff_Role__c.field-meta.xml
<CustomField>
    <fullName>Staff_Role__c</fullName>
    <formula>Staff__r.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Staff Role</label>
    <type>Text</type>
</CustomField>