force-app/main/default/objects/Time_Entry__c/fields/StaffName__c.field-meta.xml
<CustomField>
    <fullName>StaffName__c</fullName>
    <formula>Staff__r.FirstName + &apos; &apos; +  Staff__r.LastName</formula>
    <label>StaffName</label>
    <type>Text</type>
</CustomField>