force-app/main/default/objects/Time_Entry__c/fields/Submit_Hours__c.field-meta.xml
<CustomField>
    <fullName>Submit_Hours__c</fullName>
    <label>Duration (in decimals)</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>