force-app/main/default/objects/Time_Entry__c/validationRules/Submit_Hours.validationRule-meta.xml
<ValidationRule>
    <fullName>Submit_Hours</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    Submit_Hours__c &gt; 0,
    NOT(ISBLANK(Start_Time__c)),
    NOT(ISBLANK(End_Time__c))
)</errorConditionFormula>
    <errorMessage>You can enter either Start/End Time or Manual Hours — not both.</errorMessage>
</ValidationRule>