force-app/main/default/objects/Time_Entry__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>NEOS_Matter__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Staff__c</columns>
    <columns>Duration__c</columns>
    <columns>Notes__c</columns>
    <columns>Entry_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>